dyn_partial_eq_derive/tests/ui/compile_errors/item-contains-non-dyn-partial-eq-trait-object.rs
use dyn_partial_eq::AsAny;
use dyn_partial_eq_derive::PartialEqDyn;

trait TestTrait: AsAny {}

#[derive(PartialEqDyn)]
struct TestStruct(Box<dyn TestTrait>);

fn main() {}
